basic code highlighting

--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,13 @@
             "styles": [
               "node_modules/@clr/icons/clr-icons.min.css",
               "node_modules/@clr/ui/clr-ui.min.css",
+              "node_modules/prismjs/themes/prism.css",
               "src/styles.scss"
             ],
             "scripts": [
               "node_modules/@webcomponents/custom-elements/custom-elements.min.js",
-              "node_modules/@clr/icons/clr-icons.min.js"
+              "node_modules/@clr/icons/clr-icons.min.js",
+              "node_modules/prismjs/prism.js"
             ],
             "es5BrowserSupport": true
           },
