--- a/package.json
+++ b/package.json
@@ -20,22 +20,24 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@clr/angular": "^1.1.3",
+    "@clr/icons": "1.1.3",
+    "@clr/ui": "1.1.3",
+    "@webcomponents/custom-elements": "^1.0.0",
     "core-js": "^2.5.4",
+    "prismjs": "^1.16.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "@clr/ui": "1.1.3",
-    "@clr/icons": "1.1.3",
-    "@webcomponents/custom-elements": "^1.0.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/prismjs": "^1.16.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
