--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "gitlab-ce-tools",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "ng build --base-href ./ && electron .",
+    "electron-pack": "ng build --base-href ./ && electron-builder --dir",
+    "electron-dist": "ng build --base-href ./ && electron-builder"
+  },
+  "build": {
+    "appId": "gitlab-ce-tools",
+    "files": [
+        "main.js",
+        "dist/gitlab-ce-tools/**/*"
+    ],
+    "directories": {
+        "output": "dist/electron"
+    }
   },
   "private": true,
   "dependencies": {
@@ -39,6 +53,8 @@
     "@types/node": "~8.9.4",
     "@types/prismjs": "^1.16.0",
     "codelyzer": "~4.5.0",
+    "electron": "^5.0.2",
+    "electron-builder": "^20.40.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
