--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,36 @@
 language: node_js
 node_js:
-    - '9'
+  - '11'
 dist: trusty
 sudo: required
+services:
+  - docker
 
-branches:
-    only:
-        - master
+cache:
+  directories:
+    - node_modules
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
 
 before_script:
-    - npm install -g @angular/cli
+  - npm install -g @angular/cli
 
 script:
-    - ng lint
-    - ng build --prod --base-href https://evilsloth.github.io/gitlab-ce-tools/index.html
+  - ng lint
+  - ng build --prod --base-href https://evilsloth.github.io/gitlab-ce-tools/index.html
+  - |
+    ENVS=`env | grep -iE '^(DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_)([A-Z]|_)*=' | sed -n '/^[^\t]/s/=.*//p' | sed '/^$/d' | sed 's/^/-e /g' | tr '\n' ' '`
+    docker run $ENVS --rm \
+      -v ${PWD}:/project \
+      -v ~/.cache/electron:/root/.cache/electron \
+      -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+      electronuserland/builder:wine \
+      /bin/bash -c "npm run electron-dist"
 
 deploy:
-    provider: pages
+  - provider: pages
     skip_cleanup: true
-    github_token: $GITHUB_TOKEN
+    github_token: $GH_TOKEN
     local_dir: dist/gitlab-ce-tools
     on:
-        branch: master
+      branch: master
