--- a/package.json
+++ b/package.json
@@ -1,70 +1,77 @@
 {
-  "name": "gitlab-ce-tools",
-  "version": "0.0.0",
-  "main": "main.js",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "electron": "ng build --base-href ./ && electron .",
-    "electron-pack": "ng build --base-href ./ && electron-builder --dir",
-    "electron-dist": "ng build --base-href ./ && electron-builder"
-  },
-  "build": {
-    "appId": "gitlab-ce-tools",
-    "files": [
-      "main.js",
-      "dist/gitlab-ce-tools/**/*"
-    ],
-    "directories": {
-      "output": "dist/electron"
+    "name": "gitlab-ce-tools",
+    "version": "0.0.0",
+    "description": "Additional tools for Gitlab CE",
+    "author": "evilsloth",
+    "main": "main.js",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "electron": "ng build --base-href ./ && electron .",
+        "electron-pack": "ng build --base-href ./ && electron-builder --dir",
+        "electron-dist": "ng build --base-href ./ && electron-builder -wl"
+    },
+    "build": {
+        "productName": "Gitlab CE Tools",
+        "appId": "com.github.gitlab-ce-tools",
+        "artifactName": "gitlab-ce-tools-installer.${ext}",
+        "files": [
+            "main.js",
+            "dist/gitlab-ce-tools/**/*"
+        ],
+        "directories": {
+            "output": "dist/electron"
+        },
+        "linux": {
+            "category": "Development"
+        }
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~7.2.0",
+        "@angular/common": "~7.2.0",
+        "@angular/compiler": "~7.2.0",
+        "@angular/core": "~7.2.0",
+        "@angular/forms": "~7.2.0",
+        "@angular/platform-browser": "~7.2.0",
+        "@angular/platform-browser-dynamic": "~7.2.0",
+        "@angular/router": "~7.2.0",
+        "@clr/angular": "^1.1.3",
+        "@clr/icons": "1.1.3",
+        "@clr/ui": "1.1.3",
+        "@webcomponents/custom-elements": "^1.0.0",
+        "core-js": "^2.5.4",
+        "prismjs": "^1.16.0",
+        "rxjs": "~6.3.3",
+        "tslib": "^1.9.0",
+        "zone.js": "~0.8.26"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.13.0",
+        "@angular/cli": "~7.3.9",
+        "@angular/compiler-cli": "~7.2.0",
+        "@angular/language-service": "~7.2.0",
+        "@types/jasmine": "~2.8.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "@types/prismjs": "^1.16.0",
+        "codelyzer": "~4.5.0",
+        "electron": "^5.0.2",
+        "electron-builder": "^20.40.2",
+        "jasmine-core": "~2.99.1",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.0.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~1.1.2",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.11.0",
+        "typescript": "~3.2.2"
     }
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@clr/angular": "^1.1.3",
-    "@clr/icons": "1.1.3",
-    "@clr/ui": "1.1.3",
-    "@webcomponents/custom-elements": "^1.0.0",
-    "core-js": "^2.5.4",
-    "prismjs": "^1.16.0",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "@types/prismjs": "^1.16.0",
-    "codelyzer": "~4.5.0",
-    "electron": "^5.0.2",
-    "electron-builder": "^20.40.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
-  }
 }
