--- a/.travis.yml
+++ b/.travis.yml
@@ -19,18 +19,19 @@ script:
   - ng lint
   - ng build --prod --base-href https://evilsloth.github.io/gitlab-ce-tools/index.html
   - |
-    docker run $ENVS --rm \
-        $(env | \
-          grep -Eo '^[^\s=]*(DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_)[^\s=]*' | \
-          sed '/^$/d;s/^/-e /' | \
-          paste -sd ' ' \
-        ) \
-        -v ${PWD}:/project \
-        -v ~/.cache/electron:/root/.cache/electron \
-        -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-        electronuserland/builder:wine \
-        /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
-
+    if [ -n "$TRAVIS_TAG" ]; then
+        docker run $ENVS --rm \
+            $(env | \
+            grep -Eo '^[^\s=]*(DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_)[^\s=]*' | \
+            sed '/^$/d;s/^/-e /' | \
+            paste -sd ' ' \
+            ) \
+            -v ${PWD}:/project \
+            -v ~/.cache/electron:/root/.cache/electron \
+            -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+            electronuserland/builder:wine \
+            /bin/bash -c "npm install && npm run electron-dist"
+    fi
 before_cache:
 - rm -rf $HOME/.cache/electron-builder/wine
 
