--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "electron": "ng build --base-href ./ && electron .",
-        "electron-pack": "ng build --base-href ./ && electron-builder --dir",
-        "electron-dist": "ng build --base-href ./ && electron-builder -wl"
+        "electron": "ng build --base-href \"\" && electron .",
+        "electron-pack": "ng build --base-href \"\" && electron-builder --dir",
+        "electron-dist": "ng build --base-href \"\" && electron-builder -wl"
     },
     "build": {
         "productName": "Gitlab CE Tools",
@@ -45,6 +45,7 @@
         "@clr/ui": "1.1.3",
         "@webcomponents/custom-elements": "^1.0.0",
         "core-js": "^2.5.4",
+        "electron-log": "^3.0.6",
         "electron-updater": "^4.0.6",
         "prismjs": "^1.16.0",
         "rxjs": "~6.3.3",
