--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@clr/angular": "^1.1.3",
         "@clr/icons": "1.1.3",
         "@clr/ui": "1.1.3",
+        "@ng-select/ng-select": "^2.20.0",
         "@webcomponents/custom-elements": "^1.0.0",
         "core-js": "^2.5.4",
         "electron-log": "^3.0.6",
