change file viewer lib to ace

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "core-js": "^2.5.4",
         "electron-log": "^3.0.6",
         "electron-updater": "^4.0.6",
-        "prismjs": "^1.16.0",
+        "ngx-ace-wrapper": "^8.0.0",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "zone.js": "~0.8.26"
