--- a/package.json
+++ b/package.json
@@ -32,47 +32,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.1",
-    "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
-    "@angular/forms": "~8.1.1",
-    "@angular/platform-browser": "~8.1.1",
-    "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/router": "~8.1.1",
-    "@clr/angular": "^1.1.3",
-    "@clr/icons": "1.1.3",
-    "@clr/ui": "1.1.3",
-    "@ng-select/ng-select": "^2.20.0",
-    "@webcomponents/custom-elements": "^1.0.0",
-    "core-js": "^2.5.4",
-    "electron-log": "^3.0.6",
-    "electron-updater": "^4.0.6",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@clr/angular": "^2.3.6",
+    "@clr/icons": "^2.3.6",
+    "@clr/ui": "^2.3.6",
+    "@ng-select/ng-select": "^2.20.5",
+    "@webcomponents/custom-elements": "^1.3.2",
+    "core-js": "^2.6.11",
+    "electron-log": "^3.0.9",
+    "electron-updater": "^4.2.0",
     "ngx-ace-wrapper": "^8.0.0",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/cli": "~8.1.1",
-    "@angular/compiler-cli": "~8.2.0-next.1",
-    "@angular/language-service": "~8.1.1",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "@types/prismjs": "^1.16.0",
-    "codelyzer": "^5.0.1",
-    "electron": "^5.0.2",
-    "electron-builder": "^20.40.2",
+    "codelyzer": "^5.2.1",
+    "electron": "^8.0.0",
+    "electron-builder": "^22.3.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5"
