--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "e2e": "ng e2e",
     "electron": "ng build --base-href \"\" && electron .",
     "electron-pack": "ng build --base-href \"\" && electron-builder --dir",
-    "electron-dist": "ng build --base-href \"\" && electron-builder -wl"
+    "electron-dist": "ng build --base-href \"\" && electron-builder -wl -c.snap.publish=github"
   },
   "build": {
     "productName": "Gitlab CE Tools",
