--- a/package.json
+++ b/package.json
@@ -32,37 +32,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@clr/angular": "^2.4.1",
-    "@clr/icons": "^2.4.1",
-    "@clr/ui": "^2.4.1",
+    "@angular/animations": "^9.1.4",
+    "@angular/common": "^9.1.4",
+    "@angular/compiler": "^9.1.4",
+    "@angular/core": "^9.1.4",
+    "@angular/forms": "^9.1.4",
+    "@angular/platform-browser": "^9.1.4",
+    "@angular/platform-browser-dynamic": "^9.1.4",
+    "@angular/router": "^9.1.4",
+    "@clr/angular": "^3.1.1",
+    "@clr/core": "^3.1.1",
+    "@clr/icons": "^3.1.1",
+    "@clr/ui": "^3.1.1",
     "@ng-select/ng-select": "^4.0.0",
-    "@webcomponents/custom-elements": "^1.4.1",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
     "core-js": "^2.6.11",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.3.1",
     "ngx-ace-wrapper": "^8.0.0",
     "rxjs": "^6.5.5",
-    "tslib": "^1.11.1",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/cli": "^9.1.4",
+    "@angular/compiler-cli": "^9.1.4",
+    "@angular/language-service": "^9.1.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "@types/prismjs": "^1.16.0",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^5.1.2",
     "electron": "^8.2.4",
     "electron-builder": "^22.6.0",
     "jasmine-core": "~2.99.1",
@@ -75,6 +76,6 @@
     "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.8.3"
   }
 }
