--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ sudo: required
 services:
   - docker
 
-cache:
-  directories:
+#cache:
+#  directories:
 #    - node_modules
-    - $HOME/.cache/electron
-    - $HOME/.cache/electron-builder
+#    - $HOME/.cache/electron
+#    - $HOME/.cache/electron-builder
 
 before_script:
   - npm install -g @angular/cli
@@ -32,8 +32,8 @@ script:
             electronuserland/builder:wine \
             /bin/bash -c "npm install && npm run electron-dist"
     fi
-before_cache:
-- rm -rf $HOME/.cache/electron-builder/wine
+#before_cache:
+#- rm -rf $HOME/.cache/electron-builder/wine
 
 deploy:
   - provider: pages
