--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ sudo: required
 services:
   - docker
 
-#cache:
-#  directories:
-#    - node_modules
-#    - $HOME/.cache/electron
-#    - $HOME/.cache/electron-builder
+cache:
+  - directories:
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
 
 before_script:
   - npm install -g @angular/cli
@@ -32,8 +31,11 @@ script:
             electronuserland/builder:wine \
             /bin/bash -c "npm install && npm run electron-dist"
     fi
-#before_cache:
-#- rm -rf $HOME/.cache/electron-builder/wine
+
+before_cache:
+  - sudo chown -R travis:travis $HOME/.cache/electron
+  - sudo chown -R travis:travis $HOME/.cache/electron-builder
+  - rm -rf $HOME/.cache/electron-builder/wine
 
 deploy:
   - provider: pages
