--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "@ng-select/ng-select": "^4.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "core-js": "^2.6.11",
+    "electron": "^8.2.4",
     "electron-log": "^3.0.9",
+    "electron-store": "^6.0.0",
     "electron-updater": "^4.3.1",
     "ngx-ace-wrapper": "^8.0.0",
     "rxjs": "^6.5.5",
@@ -64,7 +66,6 @@
     "@types/node": "^12.11.1",
     "@types/prismjs": "^1.16.0",
     "codelyzer": "^5.1.2",
-    "electron": "^8.2.4",
     "electron-builder": "^22.6.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
