--- a/package.json
+++ b/package.json
@@ -40,16 +40,17 @@
     "@angular/platform-browser": "^13.2.6",
     "@angular/platform-browser-dynamic": "^13.2.6",
     "@angular/router": "^13.2.6",
-    "@clr/angular": "^4.0.1",
-    "@clr/core": "^4.0.1",
-    "@clr/icons": "^4.0.1",
-    "@clr/ui": "^4.0.1",
-    "electron-log": "^3.0.9",
-    "electron-store": "^6.0.0",
-    "electron-updater": "^4.3.4",
+    "@cds/core": "^5.6.4",
+    "@clr/angular": "^13.0.2",
+    "@clr/icons": "^13.0.2",
+    "@clr/ui": "^13.0.2",
     "@ng-select/ng-select": "^4.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "core-js": "^2.6.11",
+    "electron-log": "^3.0.9",
+    "electron-store": "^6.0.0",
+    "electron-updater": "^4.3.4",
+    "lit-html": "^2.2.1",
     "ngx-ace-wrapper": "^8.0.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
