--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.6",
+    "@angular-eslint/builder": "13.1.0",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/schematics": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "^13.2.6",
     "@angular/compiler-cli": "^13.2.6",
     "@angular/language-service": "^13.2.6",
@@ -65,9 +70,14 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "@types/prismjs": "^1.16.0",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
     "electron": "^8.5.3",
     "electron-builder": "^22.8.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.17",
@@ -77,7 +87,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.5.5"
   }
 }
