--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-electron": "ng build --base-href \"\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -72,7 +73,7 @@
     "@types/prismjs": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
-    "electron": "^8.5.3",
+    "electron": "^18.0.2",
     "electron-builder": "^22.8.0",
     "eslint": "^8.2.0",
     "eslint-plugin-import": "latest",
