- fix servers dropdown styles - exclude hidden results from hits calculation (closes #35)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
           "off",
           "always"
         ],
+        "arrow-body-style": "off",
         "import/order": "off",
         "@typescript-eslint/naming-convention": "off",
         "no-underscore-dangle": "off",
