--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,9 @@ jobs:
 
             - name: Install Dependencies
               if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+              # --force needed because of npm bug/breaking change https://github.com/npm/cli/issues/4998
               run: |
-                  npm ci
+                  npm ci --force
 
             - name: Build
               run: |
