--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lit-html": "^2.2.1",
     "ngx-ace-wrapper": "^8.0.0",
     "rxjs": "^6.5.5",
+    "rxjs-ratelimiter": "^1.0.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
